--- a/index.html
+++ b/index.html
@@ -6,16 +6,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
+        <nav>
+            <div class="logo-box"><img src="assets/Fahim Brand logo.png" alt="logo"></div>
+            <div class="navigators">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Blogs</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Total Purchase</a>
+                        <ul class="dropdown">
+                            <li><a href="">Barbell</a></li>
+                            <li><a href="">Dumbell</a></li>
+                            <li><a href="">Mattress</a></li>
+                            <li><a href="">BedSheet</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
 
     </header>
 
 
     <main>
+
+        <section>
+            <div class="box-container">
+                <div class="box">
+                    <div><img src="assets/fahim1.jpg" alt=""></div>
+                    <h3>Mr Aziz</h3>
+                    <div>Reviews(<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i>
+
+                        )</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil soluta aut eligendi. Expedita,
+                        exercitationem suscipit? Quam in beatae maxime minus recusandae repudiandae dolor, cupiditate
+                        ipsum, ut quae cumque possimus nulla.</p>
+
+
+
+                </div>
+                <div class="box">
+                    <div><img src="assets/fahim2.jpg" alt=""></div>
+                    <h3>Mr Olympic</h3>
+                    <div>Reviews(<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-regular fa-star-half-stroke"></i>
+
+                        )</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil soluta aut eligendi. Expedita,
+                        exercitationem suscipit? Quam in beatae maxime minus recusandae repudiandae dolor, cupiditate
+                        ipsum, ut quae cumque possimus nulla.</p>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- grid section -->
+
+        <section class="section-2">
+            <div class="title-section">
+                <h2>Here's some amazing photos</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, officiis modi? Sapiente, veritatis
+                    molestiae? Suscipit eveniet ea repellat qui, explicabo inventore. Doloribus vero officiis
+                    cupiditate, tenetur illum voluptatum saepe rerum?</p>
+            </div>
+            <!-- photo gallery -->
+            <div class="section-content">
+                <div><img class="img-1" src="assets/fahim3.jpg" alt=""></div>
+                <div><img class="img-2" src="assets/fahim4.jpg" alt=""></div>
+                <div><img class="img-3" src="assets/Fitness Gym Facebook Cover.jpg" alt=""></div>
+                <div><img class="img-4" src="assets/Screenshot_9-4-2024_185842_firefly.adobe.com.jpeg" alt=""></div>
+
+            </div>
+
+
+
+
+
+        </section>
 
 
 
